--- a/src/com/proga/CPUsimLite/ProgramRun.form
+++ b/src/com/proga/CPUsimLite/ProgramRun.form
@@ -26,13 +26,17 @@
           <Group type="102" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="jScrollPane1" pref="376" max="32767" attributes="0"/>
+                  <Component id="jScrollPane1" max="32767" attributes="0"/>
                   <Group type="102" attributes="0">
-                      <Component id="start" min="-2" pref="69" max="-2" attributes="0"/>
+                      <Component id="start" min="-2" pref="57" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="51" max="-2" attributes="0"/>
+                      <Component id="fetch" min="-2" pref="68" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
-                      <Component id="next" min="-2" pref="49" max="-2" attributes="0"/>
+                      <Component id="execute" min="-2" pref="82" max="-2" attributes="0"/>
                       <EmptySpace max="32767" attributes="0"/>
-                      <Component id="exit" min="-2" pref="75" max="-2" attributes="0"/>
+                      <Component id="next" min="-2" pref="49" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="50" max="-2" attributes="0"/>
+                      <Component id="exit" min="-2" pref="54" max="-2" attributes="0"/>
                   </Group>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
@@ -49,9 +53,15 @@
               <Component id="jScrollPane1" min="-2" pref="229" max="-2" attributes="0"/>
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="1" max="-2" attributes="0">
-                  <Component id="start" alignment="0" max="32767" attributes="0"/>
-                  <Component id="next" alignment="0" max="32767" attributes="0"/>
-                  <Component id="exit" min="-2" pref="33" max="-2" attributes="0"/>
+                  <Group type="103" alignment="0" groupAlignment="3" attributes="0">
+                      <Component id="start" alignment="3" max="32767" attributes="0"/>
+                      <Component id="fetch" alignment="3" max="32767" attributes="0"/>
+                  </Group>
+                  <Group type="103" groupAlignment="3" attributes="0">
+                      <Component id="exit" alignment="3" min="-2" pref="33" max="-2" attributes="0"/>
+                      <Component id="next" alignment="3" max="32767" attributes="0"/>
+                      <Component id="execute" alignment="3" max="32767" attributes="0"/>
+                  </Group>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
           </Group>
@@ -107,7 +117,7 @@
     <Component class="javax.swing.JButton" name="start">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-          <Font name="Cantarell" size="14" style="1"/>
+          <Font name="Cantarell" size="14" style="0"/>
         </Property>
         <Property name="text" type="java.lang.String" value="start"/>
       </Properties>
@@ -123,6 +133,30 @@
         <Property name="horizontalAlignment" type="int" value="0"/>
         <Property name="text" type="java.lang.String" value="Running The Program"/>
       </Properties>
+    </Component>
+    <Component class="javax.swing.JButton" name="fetch">
+      <Properties>
+        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+          <Font name="Cantarell" size="14" style="1"/>
+        </Property>
+        <Property name="text" type="java.lang.String" value="fetch"/>
+        <Property name="enabled" type="boolean" value="false"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="fetchActionPerformed"/>
+      </Events>
+    </Component>
+    <Component class="javax.swing.JButton" name="execute">
+      <Properties>
+        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+          <Font name="Cantarell" size="14" style="1"/>
+        </Property>
+        <Property name="text" type="java.lang.String" value="Execute"/>
+        <Property name="enabled" type="boolean" value="false"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="executeActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
