--- a/src/com/proga/CPUsimLite/CPURegisters.form
+++ b/src/com/proga/CPUsimLite/CPURegisters.form
@@ -66,7 +66,7 @@
           <Group type="102" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
               <Component id="jLabel6" min="-2" max="-2" attributes="0"/>
-              <EmptySpace type="separate" max="-2" attributes="0"/>
+              <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="0" attributes="0">
                       <Group type="103" groupAlignment="3" attributes="0">
@@ -169,7 +169,7 @@
           <Font name="Cantarell" size="15" style="1"/>
         </Property>
         <Property name="horizontalAlignment" type="int" value="0"/>
-        <Property name="text" type="java.lang.String" value="CPU Registers"/>
+        <Property name="text" type="java.lang.String" value="CPU Registers (Hex)"/>
       </Properties>
     </Component>
   </SubComponents>
