--- a/src/com/proga/CPUsimLite/MainMemory.form
+++ b/src/com/proga/CPUsimLite/MainMemory.form
@@ -72,8 +72,8 @@
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
               <Table columnCount="2" rowCount="0">
-                <Column editable="false" title="Addesss" type="java.lang.String"/>
-                <Column editable="false" title="Content" type="java.lang.String"/>
+                <Column editable="false" title="Addesss(Hex)" type="java.lang.String"/>
+                <Column editable="false" title="Content(Hex)" type="java.lang.String"/>
               </Table>
             </Property>
             <Property name="cellSelectionEnabled" type="boolean" value="true"/>
